workspace-sf/force-app/main/default/objects/GarantiaProdutoConfiguracao__c/GarantiaProdutoConfiguracao__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do produto de uma configuração</description>
    <label>Garantia do produto da configuração</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do produto da configuração</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>