workspace-sf/force-app/main/default/objects/GarantiaProdutoConfiguracao__c/fields/ProdutoConfiguracao__c.field-meta.xml
<CustomField>
    <fullName>ProdutoConfiguracao__c</fullName>
    <label>Produto da configuração</label>
    <referenceTo>ProdutoConfiguracao__c</referenceTo>
    <relationshipLabel>Garantias do produto da configuração</relationshipLabel>
    <relationshipName>GarantiasProdutoConfiguracao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>