workspace-sf/force-app/main/default/objects/GarantiaProdutoConfiguracao__c/fields/TipoLimiteCapital__c.field-meta.xml
<CustomField>
    <fullName>TipoLimiteCapital__c</fullName>
    <label>Tipo de limite de capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fator</fullName>
            </value>
            <value>
                <fullName>Fixo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>